@@ -1,6 +1,8 @@
 Revision history for Dancer-Plugin-Catmandu-SRU
 
 {{$NEXT}}
+  - fix setting content type
+  - new content_type setting
 
 0.0502  2018-02-27 12:10:52 CET
   - host and port are derived by Dancer (better support for reverse proxy)
